# discord-music

./: .gitignore  README.md  discord_whisper.py  in_and_out.py  main.py  pyproject.toml  test_bridge.py  vlc_helper.py
discord_bridge/: __init__.py  components.py  core.py  infrastructure.py  patch.py
src/: bot.py  discord_intercom.py  discord_recorder.py  discord_speaker.py  discord_vlc.py
