[project]
name = "discord-intercom"
version = "0.1.0"
description = "High-performance Discord voice utility using VLC and named pipes."
authors = [{ name = "An Sung", email = "ansung@chromium.org" }]
dependencies = ["discord-ext-voice-recv", "discord-py"]
readme = "README.md"
requires-python = ">=3.12"
[project.scripts]
intercom = "discord_intercom:main"
streamer = "discord_vlc:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.uv]
managed = true
package = true

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90", "B", "I"]
exclude = ["build", "dist", ".venv"]
[tool.ruff.per-file-ignores]
"src/__init__.py" = ["F401"]
